--- a/react-journal/package.json
+++ b/react-journal/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "date-fns": "^2.30.0",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-split": "^2.0.14"
   },
   "devDependencies": {
